<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/faq_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:id="@+id/fragment_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/faq_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="25sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/faq_text_q1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_q1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/faq_text_a1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_a1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/faq_text_q2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_q2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/faq_text_a2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_a2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/faq_text_q3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_q3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/faq_text_a3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_a3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/faq_text_q4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_q4"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/faq_text_a4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_a4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/faq_text_q5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_q5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/faq_text_a5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/faq_a5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/white"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>