<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/browse_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/gray"
        android:text="Browse Movies"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="12sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/shows_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/gray"
        android:text="Browse Series"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="12sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/myqueue_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/gray"
        android:text="@string/activity_q"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="12sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/select_services_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/gray"
        android:text="@string/activity_select"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="12sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/gray"
        android:text="@string/activity_settings"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="12sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center"/>

</LinearLayout>